Last improvements